Revision history for Perl extension Module::Build.

0.35_08 - 

0.35_07 - Sat Nov 14 17:14:39 EST 2009

 Bug fixes:

 - Auto-detection of abstract and author fixed for mixed-case POD headers
   (RT#51117) [David Wheeler]

 - resume() was not restoring additions to @INC added in Build.PL
   (RT#50145) [David Golden]

 - When tarball paths are less than 100 characters, disables 'prefix'
   mode of Archive::Tar for maximum compatibility (RT#50571) [David Golden]

0.35_06 - Fri Nov 13 14:51:28 EST 2009

 Enhancements:

 - Added experimental inc/ bundling; see Module::Build::Bundling for
   details.  [David Golden and Eric Wilhelm]

 - Clarified that 'apache' in the license attribute indicates the Apache
   License 2.0 and added 'apache_1_1' for the older version of the license
   (RT#50614) [David Golden]

 Bug fixes:

 - Merging 'requires' and 'build_requires' in Module::Build::Compat could
   lead to duplicate PREREQ_PM entries; now the highest version is used
   for PREREQ_PM. (RT#50948) [David Golden]

 - Module::Build::Compat will now die with an error if advanced,
   non-numeric prerequisites are given, as these are not supported by
   ExtUtils::MakeMaker in PREREQ_PM [David Golden]

 - Made MYMETA generation non-fatal if fields required for META.yml 
   are missing [David Golden]

 - Added Pod::Simple to requirements for manpage support; avoids
   problems if a user has a broken Pod::Man/Pod::Simple.  (RT#50081)
   [David Golden]

 - Won't die if installed Pod::Readme is broken [David Golden]

 Other:

 - Fixed Module::Build::Notes POD [David Golden]

 - Some commands had become silent by default, so added a few short status
   messages so users know something actually happened [David Golden]

 - Cleaned up Changes file formatting [David Golden]

 - Removed most PERL_CORE customizations from test files due to
   reorganization of dual-life modules in core (RT#49522) [David Golden]

0.35_05 - Wed Oct 28 17:20:59 EDT 2009

 Bug fixes:
